Re VIV-274: Fix read-only styling

--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1182,7 +1182,7 @@
 	margin-left: 25px;
 }
 
-.inline-form .fieldname-authorships div.widget {
+.inline-form .fieldname-authorships > div.widget {
   width: 445px;
 }
 
