Re VIV-296: Use Fanstatic instead of zc.resourcelibrary
Rename jsuri.js to be more Python friendly; also the versioning should be done via fanstatic now.

--- a/src/zeit/content/article/browser/resources/recension.css
+++ b/src/zeit/content/article/browser/resources/recension.css
@@ -35,11 +35,11 @@
 }
 
 .recension div.recensionheader span.recensionaction a[rel="edit"] {
-  background: url("../zeit\.cms/icons/icons_sprites.png") no-repeat scroll 18px 2px transparent;  
+  background: url("/fanstatic/zeit.cms/icons/icons_sprites.png") no-repeat scroll 18px 2px transparent;
 }
 
 .recension div.recensionheader span.recensionaction a[rel="remove"] {
-  background: url("../zeit\.cms/icons/icons_sprites.png") no-repeat scroll 18px -420px transparent; 
+  background: url("/fanstatic/zeit.cms/icons/icons_sprites.png") no-repeat scroll 18px -420px transparent;
 }
 
 .recension div.recensionbody {
