--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -785,18 +785,25 @@
    margin-left:22px;
 }
 
-.type-article .object-details .toggle_infos {
+.type-article .object-details .toggle_infos,
+.type-article #article-content-suggest-keywords .toggle_infos {
   background-image: none;
   background-position: 15px 8px !important;
   margin-top: 10px;
   padding: 2px 0px !important;
 }
 
-.type-article .object-details .toggle_infos:hover {
+.type-article .object-details .toggle_infos:hover,
+.type-article #article-content-suggest-keywords .toggle_infos:hover {
   background-image: none;
   background-position: 15px 8px !important;
   margin-top: 10px;
   padding: 2px 0px !important;
+}
+
+.type-article #article-content-suggest-keywords .toggle_infos,
+.type-article #article-content-suggest-keywords .toggle_infos:hover {
+  margin-top: 20px;
 }
 
 
@@ -1035,6 +1042,14 @@
   top: 0px;
 }
 
+
+.type-article fieldset#article-content-suggest-keywords legend {
+  margin-top: 15px;
+  padding-left: 0px;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #E4E4E4;
+  font-size: 9px;  /* supposed to look like a div.label */
+}
 
 .type-article form[action$="asset-badges"] {
   padding-left: 177px;
