Re VIV-389: Revert multi-select for ressorts, use only single select
Backs out commit:59f4cc3647b3

(It turns out that the multi-select is very rare, and since we did not find
a widget that looks like a normal dropdown but allows multi selection,
it was decided that it's not worth the hassle.)

--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1844,19 +1844,19 @@
 }
 
 .type-article #form-social .field.fieldname-twitter,
-.type-article #form-social .field.fieldname-twitter_ressorts,
+.type-article #form-social .field.fieldname-twitter_ressort,
 .type-article #form-social .field.fieldname-facebook,
-.type-article #form-social .field.fieldname-facebook_ressorts {
+.type-article #form-social .field.fieldname-facebook_ressort {
     float: left;
 }
 
-.type-article #form-social .field.fieldname-twitter_ressorts .label span,
-.type-article #form-social .field.fieldname-facebook_ressorts .label span {
+.type-article #form-social .field.fieldname-twitter_ressort .label span,
+.type-article #form-social .field.fieldname-facebook_ressort .label span {
     text-transform: none;
 }
 
-.type-article #form-social .field.fieldname-twitter_ressorts .widget,
-.type-article #form-social .field.fieldname-facebook_ressorts .widget {
+.type-article #form-social .field.fieldname-twitter_ressort .widget,
+.type-article #form-social .field.fieldname-facebook_ressort .widget {
     clear: none;
     width: inherit;
     margin-top: 0;
@@ -1866,8 +1866,8 @@
     clear: left;
 }
 
-.type-article #form-social .select2-container {
-    margin-top: -5px;  /* vertically centered appearance */
+.type-article #form-social select {
+    margin-top: -4px;  /* vertically centered appearance */
 }
 
 /* breaking news */
