Re VIV-469: Make styling of combination widget work in read-only mode, too

--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1580,7 +1580,7 @@
 .type-article #edit-form-channel .combinationFieldWidget td.label {
     display: none;
 }
-.type-article #edit-form-channel .combinationFieldWidget tr.field {
+.type-article #edit-form-channel .combinationFieldWidget tr {
     display: inline-block;
 }
 
