--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -632,6 +632,16 @@
   background-position: 3px -208px;
 }
 
+.type-article .rte-toolbar > a[href='show_find_dialog'] {
+  background-position: 3px -55px;
+  color: transparent;
+}
+
+.type-article .rte-toolbar > a[href='show_find_dialog']:hover,
+.type-article .rte-toolbar > a.active[href='show_find_dialog'] {
+  background-position: 3px -85px;
+}
+
 .type-article .link_input {
   background-color: #fff;
   border-radius: 5px;
