--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1809,7 +1809,9 @@
 .type-article .article-editor-inner a.button,
 .type-article .article-editor-inner button,
 .type-article .article-editor-inner input[type=button],
-.type-article .editable-area input.button {
+.type-article .editable-area input.button,
+/* XXX This does not belong here, but we have no overarching styling concept. */
+.type-centerpage-2009 a.button {
   -moz-border-radius:3px;
   -moz-box-shadow:0px 0px 0px rgb(0, 0, 0);
   background-size: auto, 100% auto;
@@ -1830,7 +1832,9 @@
 
 .type-article .article-editor-inner a.button:hover,
 .type-article .article-editor-inner button:hover,
-.type-article .article-editor-inner input[type=button]:hover {
+.type-article .article-editor-inner input[type=button]:hover,
+/* XXX This does not belong here, but we have no overarching styling concept. */
+.type-centerpage-2009 a.button {
   background: url('/fanstatic/zeit.cms/icons/icons_sprites.png') no-repeat scroll 10px -113px, -moz-linear-gradient(top, #f1f4f9 50%, #d2d4d9 94%) repeat scroll 0 0 transparent;
   border-color: #a6a6a6;
 }
