--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -384,6 +384,35 @@
   border-color: transparent;
 }
 
+.type-article #storystream\.tldr_title {
+  width: 100%;
+}
+
+.type-article .article-editor-inner .fieldname-tldr_date input[type="button"],
+.type-article .article-editor-inner .fieldname-tldr_date input[type="button"]:hover {
+  background: -moz-linear-gradient(top,  #f1f4f9 50%, #dee1e6 94%) repeat scroll 0 0 transparent;
+  padding-left: 8px;
+}
+
+.type-article .fieldname-tldr_date input.week,
+.type-article .fieldname-tldr_date input.month,
+.type-article .fieldname-tldr_date input.infinity {
+  display: none;
+}
+
+.type-article #edit-form-storystream .fieldname-tldr_date {
+  clear: both;
+}
+
+.type-article #edit-form-storystream .fieldname-tldr_date .label,
+.type-article #edit-form-storystream .fieldname-storystreams .label {
+  margin-top: 2em;
+}
+
+.type-article .article-editor-inner .fieldname-storystreams input[name="storystream.storystreams.remove"],
+.type-article .article-editor-inner .fieldname-storystreams input[name="storystream.storystreams.remove"]:hover {
+  background-position: 10px -2720px, 0 0;
+}
 
 /* Uppercase and some other properties for some labels */
 
