re DEV-892: Allow label of a checkbox to be on the same line as the checkbox.

--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1782,6 +1782,13 @@
 
 /* checkbox */
 
+.type-article #edit-form-teaser .inline-form.wired .fieldtype-checkbox .field,
+.type-article #edit-form-teaser .inline-form.wired .fieldtype-checkbox .widget,
+.type-article #edit-form-article-content .inline-form.wired .fieldtype-checkbox .field,
+.type-article #edit-form-article-content .inline-form.wired .fieldtype-checkbox .widget {
+    width: auto;
+}
+
 .type-article #edit-form-filename .inline-form .fieldtype-checkbox .widget,
 .type-article #edit-form-misc .inline-form .fieldtype-checkbox .widget,
 .type-article #edit-form-metadata .inline-form .fieldtype-checkbox .widget,
