--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1,19 +1,9 @@
-/* cp-content only concerning article editor */
-.type-article #content {
-  background: linear-gradient(to bottom, #83a1ba 25px,#83a1ba 25px,#f1f4f9 25px,#f1f4f9 100%);
-  left:.5em; 
-}
-
-.location-workingcopy.type-article #content {
-  background: linear-gradient(to bottom, #8e8d85 25px,#8e8d85 25px,#f1f4f9 25px,#f1f4f9 100%);
-  left:.5em; 
-}
-
 .type-article #cp-content {
   bottom:0;
   left:0;
   margin-top:25px;
   right:34%;
+  background-color: #f1f4f9;
 }
 
 .type-article #cp-forms {
@@ -26,6 +16,13 @@
 
 .type-article #busy-indicator {
   right:34%
+}
+
+.type-article #editor-forms-heading {
+  position: fixed;
+  margin-top: -27px;
+  width: 100%;
+  background-color: #83a1ba;
 }
 
 .type-article #editor-forms-heading ul {
@@ -82,11 +79,6 @@
 .type-article #cp-content .editable-area {
   margin: 1em 0 0;
   padding: 0;
-}
-
-.type-article #editor-forms-heading > div {
-  margin-top: -27px;
-  position: fixed;
 }
 
 .type-article #editor-forms-heading {
