ZON-2898: Add styles for colorpicker form

--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1559,6 +1559,12 @@
   width: 9em;
 }
 
+.type-article #edit-form-teaser #teaser-image\.fill_color {
+  margin-top: 10px;
+  width: 137px;
+}
+
+
 .type-article #form-teaser-supertitle .widget,
 .type-article #form-teaser-title .widget,
 .type-article #form-teaser-text .widget {
