--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1897,6 +1897,7 @@
 
 .type-article #form-social .field.fieldname-facebook_main_text .label,
 .type-article #form-social .field.fieldname-facebook_magazin_text .label,
+.type-article #form-social .field.fieldname-facebook_campus_text .label,
 .type-article #form-social .field.fieldname-short_text .label,
 .type-article #form-social .field.fieldname-mobile_text .label {
     display: none;
