--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1952,6 +1952,30 @@
     border-top: 1px solid #d5dee7;
 }
 
+.type-article #form-social .field.fieldname-facebook_main_text:before ,
+.type-article #form-social .field.fieldname-short_text:before ,
+.type-article #form-social .field.fieldname-mobile_text:before ,
+.type-article #form-social .field.fieldname-is_amp:before {
+    font-variant: small-caps;
+    font-weight: bold;
+}
+
+.type-article #form-social .field.fieldname-facebook_main_text:before {
+    content: "Facebook";
+}
+.type-article #form-social .field.fieldname-short_text:before {
+    content: "Twitter";
+}
+.type-article #form-social .field.fieldname-mobile_text:before {
+    content: "Apps/Watch"
+}
+.type-article #form-social .field.fieldname-is_amp:before {
+    content: "Mobile Seiten";
+    display: block;  /* counteract float: left of .widget */
+}
+/* end XXX */
+
+
 /* breaking news */
 
 #breaking-retract {
