--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -230,11 +230,11 @@
   margin-bottom: 0;
 }
 
-.type-article .cp-content-inner .fold-link {
+.type-article .cp-content-inner .block-inner .fold-link {
   background: url("/fanstatic/zeit.cms/icons/icons_sprites.png") no-repeat 6px -2605px;
 }
 
-.type-article .cp-content-inner .folded .fold-link {
+.type-article .cp-content-inner .block-inner .folded .fold-link {
   background: url("/fanstatic/zeit.cms/icons/icons_sprites.png") no-repeat 6px -2635px;
 }
 
