--- a/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/src/zeit/content/article/edit/browser/resources/editor.css
@@ -1978,21 +1978,21 @@
     margin-top: -4px;  /* vertically centered appearance */
 }
 
-.type-article #form-mobile .field.fieldname-is_amp {
+.type-article #form-social .field.fieldname-is_amp {
     clear: left;
 }
 
 /* XXX We should use <fieldset>, but we'd have to combine the templates of
    zeit.edit.browser.form.InlineForm and gocept.form.grouped which is hard */
 .type-article #form-social .field.fieldname-short_text,
-.type-article #form-mobile .field.fieldname-is_amp {
+.type-article #form-social .field.fieldname-is_amp {
     padding-top: 1em;
     border-top: 1px solid #d5dee7;
 }
 
 .type-article #form-social .field.fieldname-facebook_main_text:before ,
 .type-article #form-social .field.fieldname-short_text:before ,
-.type-article #form-mobile .field.fieldname-is_amp:before {
+.type-article #form-social .field.fieldname-is_amp:before {
     font-variant: small-caps;
     font-weight: bold;
 }
@@ -2003,7 +2003,7 @@
 .type-article #form-social .field.fieldname-short_text:before {
     content: "Twitter";
 }
-.type-article #form-mobile .field.fieldname-is_amp:before {
+.type-article #form-social .field.fieldname-is_amp:before {
     content: "Mobile Plattformen";
     display: block;  /* counteract float: left of .widget */
 }
